app/wrapper/css/main.css
/* ... */
#smm .main .header h1 {
    margin: 0;
    margin-right: 25px;
}
#smm .main .header h1:first-child {
    float: left;
}
#smm .main .header div.close {
    display: inline-block;
    height: 100%;
}
#smm .overlay {
    height: 100%;
    width: 100%;
    text-align: center;
    position: fixed;
    top: 0;
    left: 0;
    background-color: transparent;
}
#smm .overlay > div:first-child {
    width: 100%;
    height: 50%;
    background-color: #f9db00;
    color: #000;
    position: relative;
    transition: right .5s,top .5s;
    right: 100%;
    top: 0%;
}
#smm .overlay > div > div {
    margin-left: 320px;
}
#smm .overlay > div > div > h1 {
    display: inline-block;
    position: relative;
    bottom: 0;
    left: 0;
    text-align: left;
}
#smm .overlay > div:first-child > div {
    position:absolute;
    bottom: 0;
    left: 0;
    right: 0;
    margin: 0 auto;
    margin-right: 320px;
}
#smm .overlay > div:nth-child(2) {
    width: 100%;
    height: 50%;
    background-color: #283138;
    color: #f9db00;
    position: relative;
    left: 100%;
    bottom: 0%;
    transition: left .5s,bottom .5s;
}
#smm #smm-wrapper-player-courses .course {
    height: 530px;
}
#smm #smm-wrapper-player-courses .course:hover {
    cursor: default;
}
#smm #smm-wrapper-player-courses .course .img_container div {
    margin: 0;
    padding: 0;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    height: 100%;
    max-width: 100%;
    max-height: 100%;
    background: rgba(0, 0, 0, 0.72);
    visibility: hidden;
    opacity: 0;
    transition: opacity .2s, visibility .2s;
}
#smm #smm-wrapper-player-courses .course .img_container div p {
    position: absolute;
    left: 50%;
    top: 50%;
    -webkit-transform: translate(-50%);
            transform: translate(-50%);
}
#smm #smm-wrapper-player-courses .course .img_container:hover div {
    visibility: visible;
    opacity: 1;
    cursor: pointer;
}

.course .img_container {
    position: relative;
}

#dl {
    display: none;
    position: absolute;
    top: -100%;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: #EFEFEF;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
            flex-direction: column;
    transition: top .5s;
}

.header {
    width: 100%;
    padding: 25px 0 0 0;
    display: -webkit-box;
    display: flex;
    -webkit-box-align: center;
            align-items: center;
    -webkit-box-pack: justify;
            justify-content: space-between;
}
.header h2 {
    margin: 0;
}
.header .close {
    display: inline-block;
}


.popup-overlay {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: flex;
  -webkit-box-align: center;
          align-items: center;
  -webkit-box-pack: center;
          justify-content: center;
    width: 100%;
    height: 100%;
  background: rgba(0, 0, 0, 0.6);
  position: absolute;
  z-index: 99;
    opacity: 1;
    transition: opacity .25s;
}
.popup-hidden {
    opacity: 0;
}
.popup-overlay .input-text {
    width: calc(100% - 20px);
    padding: 10px;
    border-radius: 2px;
    border-style: solid;
    background-color: #fff;
    border-width: 2px;
    border-color: #e2e2e2;
    color: #6d6d6d;
    transition: border-color .25s;
}
.popup-overlay .input-text:focus {
    outline: none;
    border-color: #5669fa;
}
.popup-overlay .popup {
  background: #fff;
  border-radius: 5px;
  width: 30%;
  margin: 70px auto;
    position: relative;
  z-index: 10;
    overflow: hidden;
    -webkit-transform: translateY(0);
            transform: translateY(0);
  transition: all 0.6s ease-in-out;
    opacity: 1;
}
.popup-overlay .hidden-card {
    -webkit-transform: translateY(-200%);
            transform: translateY(-200%);
    opacity: 0;
}
.popup-overlay .popup .close {
    position: absolute;
    right: 0;
    top: 0;
    color: #767676;
    padding: 15px;
    cursor: pointer;
}
.popup-overlay .popup .close:hover {
    color: #b2b2b2;
}
.popup-overlay .popup h2.title, .popup-overlay .popup .content {
    padding: 0 25px 25px 25px;
}
.popup-overlay .popup .button {
    width: 100%;
    background-color: #ffffff;
    padding: 25px 0;
    border-top: 1px #f2f2f2 solid;
    text-align: center;
    cursor: pointer;
}
.popup-overlay .popup .button:hover {
    background-color: #e8e8e8;
}
@media screen and (max-width: 768px){
  .box{
    width: 70%;
  }
  .popup-overlay .popup{
    width: 70%;
    left: 15%;
  }
}

.instance_container .content {
    display: -webkit-box;
    display: flex;
    width: calc(100% - 20px);
    height: auto;
    padding: 10px;
    padding-top: 0;
    transition: background-color .1s;
}
.instance_name {
    margin: 0 10px;
    padding: 5px 0;
    width: calc(100% - 20px);
    background-color: #e5e5e5;
    border-top-right-radius: 10px;
    border-top-left-radius: 10px;
}
.instance_name > * {
    margin-left: 5px;
}
.instance_container:hover {
    background-color: #e5e5e5;
}
.instance_container .content .instance_path {
    -webkit-box-flex: 1;
            flex: 1;
    border-bottom-left-radius: 10px;
    padding: 10px 15px;
    background-color: #fff;
    color: #939393;
}
.instance_action {
    padding: 10px 15px;
    color: #fff;
    border-bottom-right-radius: 10px;
    background-color: #6594ff;
    cursor: pointer;
}
.instance_action:hover {
    background-color: #296aff;
}
.instance_add {
    min-width: 50%;
    margin: 10px 10%;
    border-radius: 10px;
    text-align: center;
}

#game_folder_list .instance_container .instance_path {
    border-radius: 10px 0 0 10px;
}
#game_folder_list .instance_action {
    border-radius: 0 10px 10px 0;
}
/* ... */

